4월업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -10,7 +10,7 @@ BRA_cooperatives_desc:0 "Farmland has largely been redistributed to local cooper
 BRA_mixed_capital_ventures:0 "Mixed-Capital Ventures"
 BRA_mixed_capital_ventures_desc:0 "We have established various private-public joint ventures to manage select economic sectors."
 BRA_laissez_faire_economy:0 "Laissez-Faire Economy"
-BRA_laissez_faire_economy_desc:0 "Regulation has only burdened our nation. As such, the government has repealed most regulations in favor of unrestricted private enterprise."
+BRA_laissez_faire_economy_desc:0 "Regulation has only burdened our nation. As such, the government has repealed most regulations in favour of unrestricted private enterprise."
 BRA_nationalized_economy:0 "Nationalised Economy"
 BRA_nationalized_economy_desc:0 "Nearly every aspect of our economy is tightly controlled and private ownership is restricted."
 BRA_land_reform:0 "Land Reform Enacted"
@@ -18,7 +18,7 @@ BRA_land_reform_desc:0 "Most Brazilian land was previously owned by a few plutoc
 BRA_beat_arg:0 "Broke La Plata"
 BRA_beat_arg_desc:0 "La Plata, our historic adversary, has been defeated."
 BRA_war_reparations:0 "War Reparations from Argentina"
-BRA_war_reparations_desc:0 "Brazil crushed Argentina and her lackeys in the Great War, and now they will pay for each Brazilian life they stole in both wars. Olho por olho, dente por dente"
+BRA_war_reparations_desc:0 "Brazil crushed Argentina and her lackeys in the Weltkrieg, and now they will pay for each Brazilian life they stole in both wars. Olho por olho, dente por dente"
 BRA_tight_leash:0 "Tight Leash"
 BRA_tight_leash_desc:0 "Argentina's government now is ran by Brazilian 'advisers', and the nation is a province of Brazil all but in name"
 BRA_bradesco:0 "Bradesco"
@@ -259,13 +259,13 @@ BRA_a_loyal_navy_desc:0 "The navy is filled to its core with integralist sympath
 
 ### Parties ###
 BRA_social_democrat_party:0 "PSD"
-BRA_social_democrat_party_long:0 "Partido Social Democrata"
+BRA_social_democrat_party_long:0 "사회민주당"
 BRA_social_conservative_party:0 "PRR"
-BRA_social_conservative_party_long:0 "Partido Republicano Rio-Grandense"
+BRA_social_conservative_party_long:0 "리오그랑세스 공화당"
 BRA_authoritarian_democrat_party:0 "Tenentistas"
 BRA_authoritarian_democrat_party_long:0 "Tenentistas"
-BRA_paternal_autocrat_party:0 "Republicanos"
-BRA_paternal_autocrat_party_long:0 "Republicanos"
+BRA_paternal_autocrat_party:0 "공화당"
+BRA_paternal_autocrat_party_long:0 "공화당"
 BRA_national_populist_party:0 "AIB"
 BRA_national_populist_party_long:0 "Ação Integralista Brasileira"
 BRA_social_liberal_party:0 "Liberal-Democratas"
@@ -299,11 +299,11 @@ bra.5.d:0 "The main industrial hub of the country is still on a complete halt as
 bra.5.a:0 "We can't risk an escalation, negotiate with the syndicates."
 bra.5.b:0 "Send in the police, the army and everything we have!"
 bra.elections.1.t:0 "Brazilian Presidential Election, 1936"
-bra.elections.1.desc:0 "Due to the unstable political situation in our country, especially after our defeat on the Platine War, emergency elections have been called for the 1st of August. Four main coalitions are disputing: first, we have the Aliança Nacional Libertadora (ANL, National Liberation Alliance), a broad front for the left-wing parties, composed of the Socialist Revolutionary Party and the political sides of the BOC and CBT syndicates. Next, we have the Liberal-Democrats (Liberal-Democratas), an ad-hoc coalition of centre-left and liberal forces under former president Júlio Prestes, politically-experienced and presenting themselves as a moderate alternative to the present situation. Further to the right we have the Republicans (Republicanos), a union of conservative parties, joining landowners and industrial capitalists with the right-wing forces of the military under the leadership of populist Getúlio Vargas. The fourth main coalition are the authoritarian Brazilian Integralist Action (AIB, Ação Integralista Brasileira), the nationalist and populist party under Plínio Salgado. After a very passionate campaign, the elections took place today. As the votes were counted, the next President of Brazil was announced..."
+bra.elections.1.d:0 "Due to the unstable political situation in our country, especially after our defeat on the Platine War, emergency elections have been called for the 1st of August. Four main coalitions are disputing: first, we have the Aliança Nacional Libertadora (ANL, National Liberation Alliance), a broad front for the left-wing parties, composed of the Socialist Revolutionary Party and the political sides of the BOC and CBT syndicates. Next, we have the Liberal-Democrats (Liberal-Democratas), an ad-hoc coalition of centre-left and liberal forces under former president Júlio Prestes, politically-experienced and presenting themselves as a moderate alternative to the present situation. Further to the right we have the Republicans (Republicanos), a union of conservative parties, joining landowners and industrial capitalists with the right-wing forces of the military under the leadership of populist Getúlio Vargas. The fourth main coalition are the authoritarian Brazilian Integralist Action (AIB, Ação Integralista Brasileira), the nationalist and populist party under Plínio Salgado. After a very passionate campaign, the elections took place today. As the votes were counted, the next President of Brazil was announced..."
 bra.elections.1.a:0 "Aliança Nacional Libertadora - Edgard Leuenroth"
 bra.elections.1.b:0 "Liberal-Democratas - Júlio Prestes"
 bra.elections.1.c:0 "Republicanos - Getúlio Vargas"
-bra.elections.1.d:0 "Ação Integralista Brasileira - Plínio Salgado"
+bra.elections.1.e:0 "Ação Integralista Brasileira - Plínio Salgado"
 bra.elections.2.t:0 "Edgard Leuenroth inaugurated as President"
 bra.elections.2.d:0 "Despite all of the setbacks we have suffered on the previous years, the Aliança Nacional Libertadora grand coalition has managed to elect Edgard Frederico Leuenroth, of the Socialist Revolutionary Party, as the next president of Brazil. The fifty-five-year-old journalist and long-time anarchist was one of the organisers of the general strikes in São Paulo in 1917-1919, helping establish the anarcho-syndicalist movement in the country. He was seen, thus, by the ANL leadership, as their obvious candidate for the presidency. And today is his inauguration day! Despite what some purists think, we may be forced to work on a coalition with some left-wing elements of Liberal-Democrats to appease some parts of the middle classes. A much more palatable solution for us would be asking the left-wing Tenentes into our coalition. Others, however, still think we can handle the whole government all by ourselves."
 bra.elections.2.a:0 "Ask for support from the Liberal-Democratas."
@@ -444,11 +444,11 @@ bra.33.d:0 "With a great deal of private companies going bankrupt, unemployment 
 bra.33.a:0 "Nationalise! Everything belongs to the state!"
 bra.33.b:0 "Promote some mixed-capital ventures"
 bra.34.t:0 "New Minister of Industry"
-bra.34.desc:0 "Some members of our coalition are debating who is the best man to head the Ministry of Industry and Armaments during these present economic reforms. The PSR has put forward their own Manuel Cendón, who defends that these new revenues must be invested into military supplies. Elias Iltchenco, of the BOC, suggests that this coming capital has to be transformed into more industrial capacity and the researching of new manufacturing methods. The CBT's Hermogênio da Silva Fernandes, however, defends that we should increase our investments into military research."
+bra.34.d:0 "Some members of our coalition are debating who is the best man to head the Ministry of Industry and Armaments during these present economic reforms. The PSR has put forward their own Manuel Cendón, who defends that these new revenues must be invested into military supplies. Elias Iltchenco, of the BOC, suggests that this coming capital has to be transformed into more industrial capacity and the researching of new manufacturing methods. The CBT's Hermogênio da Silva Fernandes, however, defends that we should increase our investments into military research."
 bra.34.a:0 "Manuel Cendón - Stockpile military supplies."
 bra.34.b:0 "Elias Iltchenco - Invest on our industry."
 bra.34.c:0 "Hermogênio da Silva Fernandes - Military research."
-bra.34.d:0 "Leave everything as it is."
+bra.34.e:0 "Leave everything as it is."
 bra.35.t:0 "Unemployment Still Rising"
 bra.35.d:0 "It's already been some time since we have started implementing our new economic policies, but they have yet yield little result. Unemployment rates still haven't dropped, while the increase in industrial output has been minimal. We are even starting to lose support among our own power base! The CBT syndicate has organised a four-hour-long strike in Rio de Janeiro demanding a review of these policies. Minervino de Oliveira, a leading figure of the CBT, proposes the transformation of more companies into cooperatives. According to him, if we give up some control of our companies and divert these responsibilities to the factory managers and to the workers themselves, they will come up with smartest decisions - better than handling every single local problem to a bureaucrat far away in Rio! Some parts of our cabinet, including our Minister of Industry, believe instead in increasing state control over these companies."
 bra.35.a:0 "No changes will be made."
