--- a/Kaiserreich Korean Translation/localisation/KR_Afrika_flavour_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Afrika_flavour_l_english.yml
@@ -12,11 +12,11 @@ afro.2.a:0 "찬미하자!"
 afro.3.t:0 "이드 알피트르"
 afro.3.d1:0 "오늘은 이드 알피트르의 첫 번째 날. 모든 무슬림들이 라마단의 끝을 축하하는 자리입니다."
 afro.3.d2:0 "오늘은 이드 알피트르의 첫 번째 날. 터키인들은 라마잔 바이람이라 부르는 이 축제는 모든 무슬림들이 라마단의 끝을 축하하는 자리입니다."
-afro.3.d3:0 "During the reign of Mohammad Ali, he demanded that the whole of Egypt know when Ramadan ends. To do this he positioned a cannon to fire at the crack of dawn on the first day of Eid. Today cannons can be heard throughout Egypt from the cities to the country side as people prepare to celebrate the end of Ramadan."
+afro.3.d3:0 "무하마드 알리는 통치 기간 동안, 이집트 전역에 라마단이 끝날 때 알리라고 요구했습니다. 이렇게 하기 위해 그는 이드의 첫날 새벽에 대포를 발사하기 위해 배치했습니다. 오늘날 사람들이 라마단 마지막 날을 기념하기 위해 준비하고 있을 때, 대포 소리가 이집트 전역에서 들립니다."
 afro.3.a:0 "이 날을 축하하자!"
 
 afro.4.t:0 "술탄 아흐메드 푸아드 서거"
-afro.4.d:0 "The Sultan of Egypt Ahmed Fuad, sultan of Egypt and Sudan since 1925 has passed away today. Imposed by the British and oversaw the Egyptian revolution of 1925. He died in Cairo today at 65. His 16 year old son Farouk now ascends the throne as Sultan of Egypt and Sudan."
+afro.4.d:0 "1925년 이래 이집트와 수단의 술탄 아흐메드 푸아드가 오늘 죽었습니다. Imposed by the British and oversaw the Egyptian revolution of 1925. 그는 오늘 카이로에서 65세에 숨을 거두었습니다. 그의 16살 난 아들 Faroum은 지금 이집트와 수단의 술탄의 왕위를 계승했습니다."
 afro.4.a:0 "애송이를 두려워 할 이유는 없다"
 
 afro.5.t:0 "외메르 파루크의 왕세자비 사망!"
