4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Capitulations_l_english.yml
@@ -1,64 +1,70 @@
 l_english:
 
+### Tooltips ###
+MAF_player_becomes_GEX:0 "§Y[GEX.GetNameDef]§ (으)로 플레이하게 될 것입니다!"
+GER_will_capitulate:0 "§Y[GER.GetNameDefCap]§! (은)는 항복할 것입니다!"
+
 ### Events ###
-capt.1.t:0 "독일의 항복"
-capt.1.d:0 "우리는 비열한 적들에게 패배했습니다. 그들이 우리의 조국을 점령했지만, 전쟁은 아직 끝나지 않았습니다!"
-capt.1.a:0 "중앙아프리카를 합병하고 아프리카 대륙으로 수도를 옮긴다."
-#capt.1.b:0 "Capitulate to Marokko."
-#capt.1.c:0 "Capitulate to Vietnam."
-#capt.1.e:0 "Capitulate to New Guinea."
-#capt.1.f:0 "Capitulate to Sri Lanka."
-capt.1.g:0 "도망칠 곳은 없다. 항복한다!"
+capt.1.t:0 "Germany is Conquered"
+capt.1.d:0 "We have been beaten by our wretched enemies and our armies are collapsing across Europe. Though they have taken the Fatherland, the war is far from over!"
+capt.1.a:0 "Assume control of Mittelafrika - we shall fight on from there"
+capt.1.b:0 "There is nowhere to run. Surrender!"
 
-capt.2.t:0 "독일 제국이 항복하다!"
-capt.2.d:0 "도망칠 곳이 없는 독일 제국은 우리의 영광스러운 군대에 항복하기로 결정했습니다. 오늘은 조국의 가장 위대한 날입니다!"
-capt.2.a:0 "우리는 승리했다!"
+capt.2.t:0 "Germany Demands Direct Control"
+capt.2.d:0 "As a result of the collapse of the German war effort in mainland Europe, the Kaiser has decreed that [MAF.GetLeader] is to immediately step down as Statthalter of Mittelafrika and transfer administrative duties to Reich officials as they arrive in Africa. Mittelafrika is to be absorbed by Germany directly, with our colonial rule ended."
+capt.2.a:0 "Lapdogs no longer! Declare the independence of the Mittelafrikan Empire!"
+capt.2.b:0 "Welcome the exiled government and give in to their demands"
 
-capt.3.t:0 "독일의 항복"
-capt.3.d:0 "카이저는 [MAF.GetLeader] 이 중앙아프리카의 총독에서 물러나도록 명령했습니다. 미텔아프리카는 다시 독일에 흡수될 것입니다."
-capt.3.a:0 "우리는 더 이상 애완견이 아니다! 중앙아프리카 제국의 독립을 선언한다!"
-capt.3.b:0 "망명 정부를 환영하고 그들의 요구를 들어준다."
+capt.3.t:0 "Mittelafrika Declares Independence"
+capt.3.d:0 "The colonial administrators in Afrika have gone mad! They have declared outright independence from the Reich, leaving us no option but to collapse in the face of our enemies!"
+capt.3.a:0 "The ungrateful wretches!"
 
-capt.4.t:0 "중앙아프리카가 독립을 선언하다"
-capt.4.d:0 "아프리카 식민지 관료들이 제정신이 아닙니다! 그들은 독일 정부로부터 독립을 선언했고, 우리가 다른 수도를 찾도록 만들었습니다."
-#capt.4.a:0 "Capitulate to Marokko."
-#capt.4.b:0 "Capitulate to Vietnam."
-#capt.4.c:0 "Capitulate to New Guinea, we have nowhere else left to go."
-#capt.4.e:0 "Capitulate to Colombo."
+capt.4.t:0 "Mittelafrika Accepts Reich Control"
+capt.4.d:0 "The colonial administrators wisely decided to cede full control of Mittelafrika back to the Kaiser's officials."
+capt.4.a:0 "We now rule from Afrika"
 
-capt.5.t:0 "중앙아프리카의 복권"
-capt.5.d:0 "아프리카 식민지 관료들은 정부에 대한 완전한 통제권을 양도했습니다."
-capt.5.a:0 "우리가 이제 아프리카를 지배한다."
+capt.5.t:0 "The War with [SIA.GetNameDef]"
+capt.5.d:0 "It appears we need to deal with the continuing war in the Far East, with [SIA.GetAdjective] armies still fighting against our colonial forces in [GEA.GetNameDef]. Should we continue the war, one we almost certainly cannot hope to have much impact on with our scattered and beaten forces, or sue for peace?"
+capt.5.a:0 "Give them whatever they want"
+capt.5.b:0 "We will continue the war, if we must"
 
-capt.6.t:0 "새로운 수도"
-capt.6.d:0 "베를린은 더 이상 독일의 수도가 아닙니다, 우리는 다르에스살람으로 수도를 옮겨야 했습니다."
-capt.6.a:0 "똑같지는 않군."
+capt.6.t:0 "[From.GetNameDefCap](이)가 휴전을 제안하였습니다"
+capt.6.d:0 "The scattered forces of Germany, now fled to Africa, have offered us much of the territory they hold in [GEA.GetNameDef], if we will only end the war now before they are drawn in further."
+capt.6.a:0 "An excellent plan"
+capt.6.b:0 "Much? We want it ALL"
+                                                                        
+                                    
 
-capt.7.t:0 "독일의 항복"
-capt.7.d:0 "독일 제국은 오늘 아침 우리와 동맹국들의 군대의 진격 앞에 무조건 항복했습니다. 독일 제국은 더 이상 싸울 수 없었고 카이저와 그의 내각, 국가의 모든 기구와 가장 중요한 장군들 중 일부는 배에 올라 여전히 독일의 수중에 남아있는 식민지들로 도망쳤고 새 수도에서 전쟁을 계속해 나가기 위한 계획을 짜고 있습니다."
-capt.7.a:0 "카이저의 제국(Kaiserreich)은 무너졌다..." #Generic
-capt.7.b:0 "인터내셔널은 인류의 미래가 되리라(L'Internationale sera le genre humain)..." #Commune of France
-capt.7.c:0 "붉은 기를 높이 들어라!" #Union of Britain
-capt.7.e:0 "오스트리아만이 유일한 독일 세력이다." #Austria
-capt.7.f:0 "브레스트-리토프스크 조약의 굴욕은 뒤집혔다!" #Russia
-capt.7.g:0 "차르가 할 수 없었던 일을 노동자들이 해냈다!" #Soviets
-capt.7.h:0 "독일은 마침내 대전쟁의 참상에 대한 대가를 치뤘다." #Canada
-capt.7.i:0 "대전쟁의 대학살은 복수되었다" #Nat France
+capt.7.t:0 "[JAP.GetNameDef]과의 전쟁"
+capt.7.d:0 "It appears we need to deal with the continuing war in the Far East, with [JAP.GetAdjective] armies still fighting against our colonial forces. Should we continue the war, one we almost certainly cannot hope to have much impact on with our scattered and beaten forces, or sue for peace?"
+                                     
 
-capt.8.t:0 "독일과의 휴전?"
-capt.8.d:0 "With the fall of Berlin, the Germans had to flee to Daressalam and are now the mere shadow of their former self. So much that they asked us for a peace, agreeing to cede us their holdings in China, Indochina and the Pacific as long as we'd stop the war with them. Should we agree?"
-capt.8.a:0 "They are miserable, leave them alone and agree."
-capt.8.b:0 "Never! We'll get to Africa!"
+capt.8.t:0 "[From.GetNameDefCap](이)가 휴전을 제안하였습니다"
+capt.8.d:0 "The scattered forces of Germany, now fled to Africa, have offered us much of the colonial territory they hold in Asia, if we will only end the war now before they are drawn in further. Considering that refusing the deal will mean chasing after the Germans in Africa, perhaps we should consider their plan."
+capt.8.a:0 "좋은 생각이군"
+capt.8.b:0 "모든걸 점령할 것이다"
 
-capt.9.t:0 "일본과의 휴전"
-capt.9.d:0 "We ceded our Pacific and East Asian holdings to Japan in order to stop the war with them, this isn't very glorious but it was the sensible thing to do..."
-capt.9.a:0 "We'll take it back one day."
+capt.9.t:0 "[GEX.GetNameDefCap](이)가 휴전을 제안하였습니다"
+capt.9.d.siam:0 "The German government, now fled to Africa and in utter disarray, has arranged for a peace with [From.GetNameDef]. This will involve ceding much of our territory, and there seems little hope of continuing the fight on our own with so many Reich officials already abandoning their offices here in [GEA.GetNameDef]. Our government is in complete disarray, and without support from the homeland it seems there is little we can do."
+capt.9.d.japan:0 "The German government, now fled to Africa and in utter disarray, has arranged for a peace with [From.GetNameDef]. This will involve our complete annexation, and there seems little hope of continuing the fight on our own with so many Reich officials already abandoning their offices here in [GEA.GetNameDef]. Our government is in complete disarray, and without support from the homeland it seems there is little we can do."
+capt.9.a:0 "To the lifeboats! We're off to Africa!"
+                                                               
+                                                       
+                                                                        
+                                                              
+                                                                               
+                                                                         
 
-capt.11.t:0 "독일과의 휴전?"
-capt.11.d:0 "With the fall of Berlin, the Germans had to flee to Daressalam and are now the mere shadow of their former self. So much that they asked us for a peace, agreeing to cede us all of our former colonies on Continental Africa as long as we'd stop the war with them. Should we agree?"
-capt.11.a:0 "They are miserable, leave them alone and agree."
-capt.11.b:0 "Never! We'll get to Daressalam!"
+capt.12.t:0 "전쟁을 계속해야할까요?"
+capt.12.d:0 "The German government has collapsed and fled to Africa, assuming control over their former colonies here. They still possess much of the colonial territory we claim, however, and are in considerable disarray. Should we demand that they turn over the territories, on threat of continuing the war, or end it now?"
+capt.12.a:0 "식민지를 요구한라"
+capt.12.b:0 "독일과 싸울만큼 싸웠다"
 
-capt.12.t:0 "The peace with National France"
-capt.12.d:0 "We ceded part of our African holdings to National France in order to stop the war with them, this isn't very glorious but it was the sensible thing to do..."
-capt.12.a:0 "We'll take it back one day."
+capt.13.t:0 "The [NFA.GetAdjective] Threat"
+capt.13.d:0 "[NFA.GetNameDefCap] has issued a threat - either we turn over the colonies which once belonged to them, or they will continue their war against us. Considering our current state of disarray, it might be wise to accept their demands. If not, we will be fighting them here in Africa."
+capt.13.a:0 "Give them what they want, if it will end this"
+capt.13.b:0 "We face them here in Africa, then"
+
+capt.23.t:0 "The Germans Are Not Gone"
+capt.23.d:0 "While the last couple of days since the German collapse have been uncertain, fears that [Root.GetNameDef] would be left to its own devices are unfounded. The main German government has moved to Mittelafrika, and we have restored communications to their officials in Tanganyika. Order, at least for the moment, has been restored."
+capt.23.a:0 "That's a relief...?"
