4월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Carribean_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Carribean_Federation_l_english.yml
@@ -35,7 +35,7 @@ caf.3.b:0 "We'll provide the necessary funding, no matter the cost."
 caf.3.c:0 "Ask the Commonwealth Bank for a credit."
 caf.3.dd:0 "We currently can not afford it..."
 caf.4.t:0 "The Federation asks for our assistance"
-caf.4.d:0 "The Caribbean Federation has asked for our assistance. Great deposits of rare materials have been discovered on Jamaica but the Federation will need additional funding to exploit these."
+caf.4.d:0 "The West Indies Federation has asked for our assistance. Great deposits of rare materials have been discovered on Jamaica but the Federation will need additional funding to exploit these."
 caf.4.a:0 "Provide the funding. We will benefit from this as well."
 caf.4.b:0 "Heck no! We have nothing to give away for free!"
 caf.6.t:0 "The Commonwealth Bank granted a credit!"
@@ -67,7 +67,7 @@ caf.14.t:0 "Repay our debt!"
 caf.14.d:0 "We have to repay part of our debt to the Commonwealth Bank. This is the final payment"
 caf.14.a:0 "Finally, the last payment."
 caf.15.t:0 "Beginning of the elections"
-caf.15.d:0 "Today the great elections of the Caribbean Federation begin."
+caf.15.d:0 "Today the great elections of the West Indies Federation begin."
 caf.15.a:0 "Let the elections begin!"
 caf.16.t:0 "Voting results in Guyana"
 caf.16.d:0 "The people in Guyana have finished voting and the result is..."
@@ -110,7 +110,7 @@ caf.24.a:0 "A Liberal-Democrat coalition is formed"
 caf.24.b:0 "A Conservative-Democrat coalition is formed"
 caf.24.c:0 "Keep the current government"
 caf.25.t:0 "Beginning of the elections"
-caf.25.d:0 "Today the great elections of the Caribbean Federation begin."
+caf.25.d:0 "Today the great elections of the West Indies Federation begin."
 caf.25.a:0 "Let the elections begin!"
 caf.26.t:0 "Voting results in Guyana"
 caf.26.d:0 "The people in Guyana have finished voting and the result is..."
@@ -153,7 +153,7 @@ caf.34.a:0 "A Liberal-Democrat coalition is formed"
 caf.34.b:0 "A Conservative-Democrat coalition is formed"
 caf.34.c:0 "Keep the current government"
 caf.35.t:0 "Beginning of the elections"
-caf.35.d:0 "Today the great elections of the Caribbean Federation begin."
+caf.35.d:0 "Today the great elections of the West Indies Federation begin."
 caf.35.a:0 "Let the elections begin!"
 caf.36.t:0 "Voting results in Guyana"
 caf.36.d:0 "The people in Guyana have finished voting and the result is..."
@@ -194,14 +194,13 @@ caf.44.t:0 "No majority found after the election"
 caf.44.d:0 "We must create a minority government then."
 caf.44.a:0 "A Liberal-Democrat coalition is formed"
 caf.44.b:0 "A Conservative-Democrat coalition is formed"
-caf.44.c:0 "Keep the current government"
-caf.45.t:0 "American Immigrants arrive on Caribbean"
+caf.45.t:0 "American Immigrants arrive on the West Indies"
 caf.45.d:0 "To escape the civil war ravaging the United States immigrants have fled to Canada and Latin America. Thousands have recently arrived on the Bahamas by boat and are looking for work, food, and a place to live. We can either block their entrance, or allow them a place in our country."
 caf.45.a:0 "Welcome them with open arms!"
 caf.45.b:0 "Send them back to America!"
 caf.46.t:0 "Independence day!"
-caf.46.d:0 "Independence Day, also known as the Day of the Federation, celebrations took place today all across the country. Most everyone has set aside their political differences to celebrate the traditions of the Caribbean Commonwealth with fireworks and parades."
+caf.46.d:0 "Independence Day, also known as the Day of the Federation, celebrations took place today all across the country. Most everyone has set aside their political differences to celebrate the traditions of the West Indies with fireworks and parades."
 caf.46.a:0 "Let's celebrate!"
-caf.47.t:0 "Internal political situation in the Caribbean Commonwealth"
-caf.47.d:0 "Established in 1926, the Caribbean Federation is composed of former British and French colonies in the Caribbean. It's one of the most democratic countries among the Entente. In Caribbean policy there are three major parties. The strongest and at the forefront of politics is the Liberal Party of the Caribbean, created by a combination of leaders of the market- and social liberals. Their leader is the charismatic Francis Stanley Jackson who cooperates with Gordon Lethem and Amy Bailey. This party favours freedom of speech and free market economics. Patriotic Union Party is the most reactionary and authoritarian party, led by Frederick Stubbs and Frederick Derecourt. This party supports the idea of strong presidential rule and a return to tradition. This party is divided in two factions: Stubbs' 'democrats', which share some ideas with Liberals, the second faction is Derecourt's 'reactionists', who are nearly authoritarian who support almost total control by the state. Cipriani's Caribbean Social Democratic Party is the most leftist legal group. It has a similar view of the market with Syndicalists or even Totalists but supports large democratisation of the Federation. This party is led by Arthur Andrew Cipriani. Led by Dr. Cheddi Jagan and Fornes Burnham, the radical socialist Progressive Movement is an underground, illegal party that believes in the reign of trade unions instead of 'useless, greedy politicians'. Their strength is unknown but they surely have support from syndicalist states in Europe and America."
-caf.47.a:0 "Long live the Caribbean Commonwealth!"
+caf.47.t:0 "Internal political situation in the West Indies Federation"
+caf.47.d:0 "Established in 1926, the West Indies Federation is composed of former British and French colonies in the West Indies. It's one of the most democratic countries among the Entente. In West Indies policy there are three major parties. The strongest and at the forefront of politics is the Liberal Party of the West Indies, created by a combination of leaders of the market- and social liberals. Their leader is the charismatic Francis Stanley Jackson who cooperates with Gordon Lethem and Amy Bailey. This party favours freedom of speech and free market economics. Patriotic Union Party is the most reactionary and authoritarian party, led by Frederick Stubbs and Frederick Derecourt. This party supports the idea of strong presidential rule and a return to tradition. This party is divided in two factions: Stubbs' 'democrats', which share some ideas with Liberals, the second faction is Derecourt's 'reactionists', who are nearly authoritarian who support almost total control by the state. Cipriani's West Indies Social Democratic Party is the most leftist legal group. It has a similar view of the market with Syndicalists or even Totalists but supports large democratisation of the Federation. This party is led by Arthur Andrew Cipriani. Led by Dr. Cheddi Jagan and Fornes Burnham, the radical socialist Progressive Movement is an underground, illegal party that believes in the reign of trade unions instead of 'useless, greedy politicians'. Their strength is unknown but they surely have support from syndicalist states in Europe and America."
+caf.47.a:0 "서 인도제도 연방이여 영원하라!"
