4월 업데이트 및 삭제된부분 복구

--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -360,8 +360,8 @@ CSA_entente_embargo:0 "협상국을 배어버려라!"
 CSA_entente_embargo_desc:0 "협상국에 대항하는 전쟁을 준비하기 위해 우리는 반드시 그들의 전쟁 수행능력을 배어버려야 합니다. 우리는 협상국에 대한 앰바고를 실행하여 그들이 사격을 하기도 전에 파괴시켜 버릴 것 입니다."
 CSA_liberate_canada:0 "캐나다 해방"
 CSA_liberate_canada_desc:0 "모든 준비는 끝났습니다. 지금은 그 괴물을 처치할 시간입니다. 독재적인 영국 왕실로부터 캐나다인을 해방시킬 시간입니다."
-CSA_fate_of_the_empire:0 "Fate of the British Empire"
-CSA_fate_of_the_empire_desc:0 "Now that the British Empire and their so called Entente has been dealt with the question of what shall become of their empire is being brought. What shall we do with Canada and the Caribbean federation? What shall become of the Dominion of India? It is time to decide the fate of the British Empire once and for all."
+CSA_fate_of_the_empire:0 "대영제국의 운명"
+CSA_fate_of_the_empire_desc:0 "Now that the British Empire and their so called Entente has been dealt with the question of what shall become of their empire is being brought. What shall we do with Canada and the West Indies Federation? What shall become of the Dominion of India? It is time to decide the fate of the British Empire once and for all."
 CSA_reclaiming_america:0 "미국을 되찾다"
 CSA_reclaiming_america_desc:0 "이제 우리는 미국을 되찾을 시간입니다. 혁명으로 혼란스러운 시간에 많은 미국의 지역이 자본주의 반동분자에게 잃었습니다. 이제 그것을 되찾고 혁명을 그 지역에 전파할 시간입니다."
 CSA_hawaiian_liberation:0 "하와이 해방"
@@ -370,13 +370,13 @@ CSA_yankee_strike:0 "뉴잉글랜드 파업"
 CSA_yankee_strike_desc:0 "캐나다인들이 뉴잉글랜드를 차지했고 그 곳의 미국인들에게 자본주의의 족쇄를 강요하고 있습니다. 우리는 뉴잉글랜드 전역에 한발의 사격 없이 반동분자 정부를 전복시키기 위한 거대한 총 파업을 조직해야 합니다."
 CSA_californian_strike:0 "켈레포니아 총파업"
 CSA_californian_strike_desc:0 "소위 ‘태평양 미국’이라 불리는 곳은 자본가들의 천국입니다. 그들은 진정한 노동자의 철권을 알지 못하죠. 그들에게 반동분자의 체제는 끝났다는 것을 보여 줘야 합니다!"
-CSA_philippinian_support:0 "Filipino Liberation"
+CSA_philippinian_support:0 "필리핀 해방"
 CSA_philippinian_support_desc:0 "We should help our Filipino Comrades now that we have dealt with matters here at home. The Philippines was once a protectorate of the old United States. It is time to help our comrades in the Philippines spread Syndicalism there. We shall help them break the chains!"
 CSA_plan_purple:0 "자주색 전쟁 계획"
 CSA_plan_purple_desc:0 "자주색 전쟁 계획은 라틴 아메리카 지역에 대한 군사적 개입입니다. 우리는 이를 이용하여 팍스 아메리카 전역에 재 설립하고, 남쪽의 동무들을 도와줄 것입니다."
 CSA_cuban_intervnetion:0 "쿠바 개입"
 CSA_cuban_intervnetion_desc:0 "쿠바의 인민들은 자본주의의 압제 아래서 고통받고 있습니다. 우리는 그들의 압제로부터의 해방을 도와줄 것입니다."
-CSA_help_bolivia:0 "Help Bolivia"
+CSA_help_bolivia:0 "볼리비아 지원"
 CSA_help_bolivia_desc:0 "Bolivia is a fellow Syndicalist country in the south. We should help them spread syndicalism in the Andes."
 CSA_intervene_chile:0 "Intervene in Chile"
 CSA_intervene_chile_desc:0 "It is time to do what we can to help our comrades in Chile and bring syndicalism to them down in the south. Let the Red Eagle soar down south and break the chains of our Chilean workers!"
@@ -390,23 +390,23 @@ CSA_red_pax_american:0 "팍스 아메리카"
 CSA_red_pax_american_desc:0 "팍스 아메리카 또는 미국에 의한 평화는 북과 남아메리카 전역에 설립되었습니다. 아직까지 일부 지역에 약간의 반동분자들이 남아있지만 우리는 이 지역에 평화를 가져다 놓았고, 자본주의로부터 노동자를 해방 시켰습니다. 지금은 노동자의 평화 체제입니다!"
 
 ### Opinion Modifiers ###
-CSA_IN_USA:0 "미합중국에서 생디칼리즘 정부가 집권하다"
-CSA_JOINS_INT_FRA:0 "CSA join The Internationale"
-CSA_JOINS_INT_NFA:0 "CSA join The Internationale"
-CSA_JOINS_INT_SRI:0 "CSA join The Internationale"
-CSA_JOINS_INT_ENG:0 "CSA join The Internationale"
-CSA_NO_JOINS_INT_FRA:0 "CSA don't join The Internationale"
-CSA_NO_JOINS_INT_ENT:0 "CSA don't join The Internationale"
-CLOSED_BORDERS:0 "CSA Closes it's borders"
+CSA_IN_USA:0 "미합중국에서 생디칼리즘 정부가 집권함"
+CSA_JOINS_INT_FRA:0 "CSA가 인터내셜에 가맹함"
+CSA_JOINS_INT_NFA:0 "CSA가 인터내셜에 가맹함"
+CSA_JOINS_INT_SRI:0 "CSA가 인터내셜에 가맹함"
+CSA_JOINS_INT_ENG:0 "CSA가 인터내셜에 가맹함"
+CSA_NO_JOINS_INT_FRA:0 "CSA가 인터내셜에 가맹하지 않음"
+CSA_NO_JOINS_INT_ENT:0 "CSA가 인터내셜에 가맹하지 않음"
+CLOSED_BORDERS:0 "CSA가 국경을 봉쇄함"
 USA_EMMIGRANTS:0 "USA Emigrants from CSA"
 CSA_COEXIST_CAL:0 "CSA wants to coexist with us"
-CSA_REED_DOCTRINE_INT:0 "Reed Doctrine"
-CSA_REED_DOCTRINE_ENT:0 "Reed Doctrine"
-REED_DOCTRINE:0 "Reed Doctrine"
+CSA_REED_DOCTRINE_INT:0 "리드 독트린"
+CSA_REED_DOCTRINE_ENT:0 "리드 독트린"
+REED_DOCTRINE:0 "리드 독트린"
 CSA_COEXIST_MEX:0 "CSA Wants to coexist with us"
-CAN_USA_GOV_EXILE:0 "Exiled USA gov goes to Canada"
-CSA_mexican_american_friendship:0 "Mexican-American friendship"
-CSA_mexican_american_trade:0 "Mexican-American trade treaty"
+CAN_USA_GOV_EXILE:0 "미합중국 망명정부가 캐나다로 망명함"
+CSA_mexican_american_friendship:0 "멕시코-미국 친선"
+CSA_mexican_american_trade:0 "멕시코-미국 무역 협정"
 
 ### Flags ###
 CSA_unionists_victory:0 "The Unionists have come out on top in the Second Convention"
@@ -485,6 +485,7 @@ combinedsyndicates.17.a:0 "마침내!!"
 
 combinedsyndicates.18.t:0 "보니와 클라이드가 세상을 떠난지 10년이 되었습니다."
 combinedsyndicates.18.d:0 "이 주 영웅들은 자본주의 정부에 맞서 싸움으로써 우리 국가에 많은 도움이 되었습니다! 그들은 기념할만한 자격이 있습니다!"
+combinedsyndicates.18.a:0 "보니와 클라이드의 날이로군."
 combinedsyndicates.19.t:0 "잭 리드가 병에 들다."
 combinedsyndicates.19.d:0 "중앙 위원회의 수장인 잭 리드의 신체적 건강은 약화되고 있습니다. 이것을 더 이상 숨길 수 없기 때문에, 대중들에게 발표해야 했죠. 이 질병의 원인에 대해서 알 수 없습니다. 그러나 이 질병의 영향으로 그의 생명이 줄어드는 것은 분명합니다. 물론 그의 혁명에 대한 열정은 시들지 않았지만, 그의 신체는 혁명을 이끌기 어렵습니다."
 combinedsyndicates.19.a:0 "하필 이런 일이...."
@@ -554,10 +555,10 @@ combinedsyndicates.102.e:0 "Carlo Tresca's economic programs get him the job"
 combinedsyndicates.103.t:0 "새로운 부서기 지명"
 combinedsyndicates.103.d:0 "Having come into power, Ben Gitlow has to figure out who will help him run the country."
 combinedsyndicates.103.a:0 "Max Schactman's friendship serves him well"
-
 combinedsyndicates.103.b:0 "Carlo Tresca's union links bring him into the fold"
 combinedsyndicates.103.c:0 "Robert M. La Follette's attitude wins him the task"
 combinedsyndicates.103.e:0 "Elizabeth Gurley Flynn's attitude wins her the job"
+combinedsyndicates.104.t:0 "Foster Chooses His Right-Hand"
 combinedsyndicates.104.d:0 "Having come into power, William Z. Foster faces the key decision of who is to be his right hand man."
 combinedsyndicates.104.a:0 "Bayard Rustin's unique viewpoint gets him in"
 combinedsyndicates.104.b:0 "Jay Fox's economic programs get him the job"
