--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -193,7 +193,7 @@ GER_trondheim_no_op:0 "트론헤임 조차를 거부"
 GER_hawaii_yes_op:0 "함대 정박권 수여"
 GER_hawaii_no_op:0 "함대 정박권 수여 거부"
 GER_reichsmark_yes_op:0 "유로파마르크화 사용에 찬성하다"
-GER_reichsmark_no_op:0 "유로파마르크화 사용 거절하다"
+GER_reichsmark_no_op:0 "유로파마르크화 사용을 거절하다"
 financial_help_granted:0 "재정적 도움 기여"
 financial_help_denied:0 "재정적 도움 거부"
 GER_raised_tarrifs:0 "관세 인상"
