--- a/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
@@ -1,11 +1,11 @@
 l_english:
 
 ### Parties ###
-DEH_totalist_party:0 "최대주의자"
+DEH_totalist_party:0 "맥시미스트"
 DEH_radical_socialist_party:0 "사회주의자"
 DEH_syndicalist_party:0 "생디칼리스트"
 DEH_social_democrat_party:0 "IHRP"
-DEH_social_liberal_party:0 "자치주의자"
+DEH_social_liberal_party:0 "스와라지"
 DEH_market_liberal_party:0 "자유주의자"
 DEH_social_conservative_party:0 "통일주의자"
 DEH_authoritarian_democrat_party:0 "왕립회의"
@@ -15,7 +15,7 @@ DEH_totalist_party_long:0 "인도 최대주의당"
 DEH_radical_socialist_party_long:0 "인도 사회주의당"
 DEH_syndicalist_party_long:0 "생디칼리스트당"
 DEH_social_democrat_party_long:0 "전인도 자주당"
-DEH_social_liberal_party_long:0 "자치당"
+DEH_social_liberal_party_long:0 "당"
 DEH_market_liberal_party_long:0 "인도 자유당"
 DEH_social_conservative_party_long:0 "통일당"
 DEH_authoritarian_democrat_party_long:0 "왕립회의"
@@ -24,6 +24,22 @@ DEH_national_populist_party_long:0 "황실 지지자"
 
 ### Leader Descriptions ###
 POLITICS_GEORGE_FIFTH_DESC:0 "The years since the Weltkrieg have seen much trouble in the British Raj, with the British Revolution of 1925 being the catalyst for many of the events since, but the loyalty to the King-Emperor George remained steadfast among some of his Indian subjects, particularly those in the north. But one, unsinkable truth for the King-Emperor is that the new Dominion is no Raj- it is but just a shaving of the Jewel of the Crown. No longer does the Crown maintain an iron grip on the subcontinent, but a loose alliance with the north- a truth that does not help the demeanour of the King-Emperor in the slightest, and a truth that sits uncomfortably with the Delhi Government, of whom many members wish to break all ties with the King-Emperor and declare home rule. For now the King-Emperor still rules, but his power is diminished and his roar is now a soft bark."
+POLITICS_EDWARD_DELHI_DESC:0 "Edward of Windsor, with the passing of his father, ‘King-Emperor’, George V, was coronated in a lavish ceremony in Ottawa. The young monarch, notably solemn upon his enthronement, inherited an Empire undoubtedly a shadow of its former glory, and a kingdom occupied by syndicalist revolutionaries. Undeterred, King Edward maintains, above all else, the desire that the banner of the United Kingdom again proudly fly above the British Isles."
+POLITICS_CHAMBER_OF_PRINCES_DESC:0 "The Chamber of Princes was originally established by King-Emperor George V during the Weltkrieg to appease the increasingly unruly Indian nobility. The instability and political violence that followed the British revolution necessitated that, to maintain authority, the unelected Chamber was delegated substantial governmental authority, and eventually reorganized into the proper upper-house of the now bi-cameral Indian legislature. Upon the death of the viceroy of India, the Chamber is responsible for appointing a successor."
+POLITICS_GANGA_SINGH_DESC:0 "Ganga Singh, prince of Bikaner, proved a capable military leader during the Weltkrieg, eventually becoming the only Indian member of the British Imperial War Cabinet. Not just a military man however, Singh proved to be an astute politician, gaining a substantial following by advocating sweeping yet gradual reform of India’s convoluted political system. In his push for reform however, Singh maintained cordiality with the British administration, and gained the admiration of sympathetic aristocrats. Due to his popularity, Singh’s support was crucial for then Viceroy, Rufus Isaacs, in transforming India from an appendage of the British Empire into an independent Dominion."
+POLITICS_BHIMRAO_RAMJI_AMBEDKAR_DESC:0 "Bhimrao Ramji Ambedkar, despite being born into the Dalit caste, was recognized as a prodigious student, and earned his place as a student of the most prestigious western universities. Inspired by western liberalism, Ambedkar ascended to the forefront of Indian politics on a platform of caste reconciliation. He seeks to promote the social standing of the Dalits without destroying India’s social and political order."
+POLITICS_RATANJI_DADABHOY_TATA_DESC:0 "Jehangir Ratanji Dadabhoy Tata, son of perhaps India’s most famous industrialist, after whom Jehangir is named, fled his native Paris during the Weltkrieg, shortly before Germany captured the city. Upon arrival in Delhi, Jehangir’s father fell increasingly ill, and Jehangir assumed control of the Tata business empire. Jehangir personally financed counter-insurgency operations in the wake of the break-up of the Raj, and in the process, became increasingly involved in Dominion politics, eventually being appointed as chief of the Indian national bank."
+POLITICS_ATUL_CHANDRA_CHATTERJEE_DESC:0 "Atul Chandra Chatterjee, diplomat and moderate labor activist, served diligently in the British Raj’s ‘Indian Civil Service’; he was the British High Commissioner to India when the British Revolution struck, and upended India’s political system. His efforts were pivotal to the establishment of the Dominion’s foreign service, even personally managing most of his nation’s diplomats when issues arose. Following Viceroy Ganga Singh’s appointment, Chatterjee became even more prominent in India politics, even striking up a friendship with Singh. Chatterjee has been a vocal advocate of state protection of the rights of India’s industrial laborers."
+POLITICS_SRINIVASA_SASTRI_DESC:0 "Srinivasa Sastri, who founded the Indian Liberal Party after leaving the Indian National Congress, is renowned for negotiating a degree of autonomy for India shortly before the British Revolution. Sastri, though once nearly incarcerated for his association with the Indian Home Rule League, and not opposed to India’s recent declaration of a republic, is quite an anglophile; he believes that the institutions established by the British should be maintained."
+POLITICS_MINOCHER_MASANI_DESC:0 "Minocher Rustom Masani, a vocal proponent of classical liberalism, split with the Indian National Congress due to the Congress’s drift towards socialism. Masani is a charismatic and good-natured man, who, despite policy disagreements, maintains personal friendships with many political rivals, even those of the Indian National Congress. Minocher similarly enjoys even the most mundane of political decision, often speaking for hours on end on the floor of parliament on the minutia of financial decisions and administrative budgets. Minocher’s attention to detail and gregarious nature has won him a large political following."
+POLITICS_NARASIMHA_KELKAR_DESC:0 "Narasimha Chintaman Kelkar split with the Indian National Congress due to the Congress’s increasingly socialist stance. Shortly before the disintegration of the British Raj, Kelkar, and other more liberal Congress defectors founded the Swaraj (meaning independence or self-governance) Party to promote parliamentarian democracy in India. Kelkar is not only a man of politics, however; he is an accomplished playwright, and his works have been responsible for igniting increased national identity and political consciousness among the people of India."
+POLITICS_BALASAHEB_KHER_DESC:0 "Balasaheb Gangadhar Kher, and accomplished lawyer, fled Bombay for Delhi in the chaos that followed the dissolution of the British Raj. Kher rose in political prominence by advocating for the protection of the rights of India’s lower castes, and it is from these lower caste’s that he draws the greatest support. Kher is known for his compassion for the less fortunate outside politics as well; he is known to personally involve himself in charitable endeavors, and is as likely to be found attending to his political duties, as assisting in the construction of a new orphanage or staffing a soup kitchen."
+POLITICS_KANAIYALAL_MUNSHI_DESC:0 "Kanaiyalal Maneklal Munshi is an acclaimed author in his native Gujarat; his works cover a broad range of topics, including: law, Gujrati culture, and political theory. Though once a member of the Indian National Congress, Munshi bears a disdain for socialism, and abandoned the Congress due to its leftward drift. Munshi believes that to assure liberty for the people of India and safeguard against the encroachment of insidious socialist influence, property rights must be protected, while the estates of India’s landed aristocracy must be broken up."
+POLITICS_KRISHNA_MENON_DESC:0 "Krishna Menon, often accused of harbouring sympathies for socialism and the Indian National Congress, has nonetheless, become one of India’s most prominent political figures. Menon is a masterful manipulator, playing the game of Indian politics much like a grandmaster would play a round of chess. With the death of his political ally, Muhammad Ali Jinnah, Menon was forced to step out from the shadows, and become the face of the moderate left in India. Menon is as distrustful of the West as of political rivals, fearing any continued association with the remnants of the British Empire could lead India to ruin."
+POLITICS_MUHAMMAD_ALI_JINNAH_DESC:0 "Muhammad Ali Jinnah, first entered into politics to promote the interests of India’s Muslim minority. Jinnah organised the Lucknow Pact between feuding Muslim and Hindu independence leaders in 1916, and founded the All-India Homerule League during the Weltkrieg to advocate Indian self-determination. Following the Indian National Congress’s drift towards socialism, Jinnah split from the congress to form a renewed Homerule League as a formal political party."
+POLITICS_SIKANDER_KHAN_DESC:0 "Sikander Hayat Khan, Punjabi aristocratic and statesman, and his Unionist Party, have emerged victorious in India’s latest presidential election. Khan began his political career as an ally of leftist Muhammad Jinnah, but drifted further from Jinnah with time. He joined the conservative Unionist Party, which had split from the Jinnah’s Home Rule Party over dissatisfaction with Jinnah’s leadership, and disagreement with the Party’s endorsement of land redistribution; this split between Jinnah and Khan has created a political rift amongst Indian Muslims."
+POLITICS_CHHOTU_RAM_DESC:0 "Chhotu Ram, after helping to found the Unionist Party, withdrew from politics to focus on social work. Ram’s work led to a marked increase in the standard of living of some of the most destitute people of Punjab, and the name ‘Chhotu Ram’ was soon on the lips of a great many Indians. Upon his return to politics, Ram set out to reform the Unionist Party, which had evolved from an alliance of Punjabi Jats and Muslims into an organisation for the protection of the rural nobility of northern India."
+POLITICS_MALIK_KHIZAR_TIWANA_DESC:0 "Malik Khizar Hayat Tiwana, upon returning from service in the Weltkrieg, became distraught at the division and political violence which had consumed India. Tiwana took up arms against the marauding socialists loyal to the breakaway government in Bengal. Tiwana committed himself in the fragile peace that followed to bring unity to the Indian sub-continent. He joined the conservative Unionist party based in his native Punjab and quickly rose to its leadership."
 
 ### Tooltips ###
 DEH_ISAC_has_formed:0 "§Y[CAN.GetName]§! has formed the ISAC\n"
@@ -39,17 +55,17 @@ DEH_PRF_convert_faster:0 "Cores will be gained on the §Y[PRF.GetName]§!'s stat
 DEH_PRF_convert_slower:0 "Cores will be gained on the §Y[PRF.GetName]§!'s states more slowly\n"
 DEH_all_india_owned:0 "Owns all core states of the §Y[DEH.GetName]§!, §Y[PRF.GetName]§! and §Y[BHC.GetName]§!\n"
 DEH_all_india_cored:0 "All core states of the §Y[PRF.GetName]§! and §Y[BHC.GetName]§! are now core states of the §Y[DEH.GetName]§!\n"
-DEH_PRF_war:0 "War between [DEH.GetNameDef] and [PRF.GetNameDef]"
-DEH_PRF_war_declined:0 "[DEH.GetNameDef] declined to invade [PRF.GetNameDef]"
-DEH_BHC_war:0 "War between [DEH.GetNameDef] and [BHC.GetNameDef]"
-DEH_BHC_war_declined:0 "[DEH.GetNameDef] declined to invade [BHC.GetNameDef]"
-BHC_PRF_war:0 "War between [BHC.GetNameDef] and [PRF.GetNameDef]"
-BHC_PRF_war_declined:0 "[BHC.GetNameDef] declined to invade [PRF.GetNameDef]"
-DEH_becomes_india:0 "§Y[DEH.GetNameDef]§! will become §YIndia§!\n"
+DEH_PRF_war:0 "War between Dominion of India and Princely Federation"
+DEH_PRF_war_declined:0 "Dominion of India declined to invade Princely Federation"
+DEH_BHC_war:0 "War between Dominion of India and Bharatiya Commune"
+DEH_BHC_war_declined:0 "Dominion of India declined to invade Bharatiya Commune"
+BHC_PRF_war:0 "War between Bharatiya Commune and Princely Federation"
+BHC_PRF_war_declined:0 "Bharatiya Commune declined to invade Princely Federation"
+DEH_becomes_india:0 "§Y[DEH.GetNameDefCap]§! will become §YIndia§!\n"
 DEH_released_BUR:0 "Released Burma"
-DEH_jinnah_wins:0 "the platform is approved and the §YHome Rule Party§! wins re-election\n"
-DEH_socialist_wins:0 "the platform is approved and the §YSocialists§! win the election\n"
-DEH_unionist_wins:0 "the platform is not approved and the §YUnionist Party§! wins the election\n"
+DEH_jinnah_wins:0 "The platform is approved and the §YHome Rule Party§! wins re-election\n"
+DEH_socialist_wins:0 "The platform is approved and the §YSocialists§! win the election\n"
+DEH_unionist_wins:0 "The platform is not approved and the §YUnionist Party§! wins the election\n"
 DEH_gandhi_hos:0 "§YMohandas Karamchand Gandhi§! becomes Head of State until the election\n"
 
 ### Ideas ###
@@ -264,7 +280,7 @@ delhi.8.d:0 "Now that Afghanistan has been dealt with, and the country secured, 
 delhi.8.a:0 "The Indian Liberal Party Wins!"
 delhi.8.b:0 "The Swaraj Party Dominates at the Ballot Box!"
 delhi.8.c:0 "Jinnah's Leftists Sweep the Elections!"
-delhi.8.e:0 "The Unionists keep stay in power!"
+delhi.8.e:0 "The Unionists remain in power!"
 
 delhi.9.t:0 "1936 Dominion Elections"
 delhi.9.d:0 "Now that Afghanistan has been dealt with, and the country secured, Viceroy Ganga Singh has decided to hold elections. Four major parties are competing for the people's votes. The Indian Liberal Party, under V. S. Srinivvasa Sastri, the socially liberal Swaraj Party under Narasimha Kelkar, the socially democratic All-India Home Rule Party under Muhammad Ali Jinnah, and finally the more conservative Unionist party under Sikander Hayat Khan."
@@ -333,7 +349,7 @@ delhi.101.a:0 "To war! We must liberate the oppressed!"
 delhi.101.b:0 "Launch covert actions to take control of their government!"
 delhi.101.c:0 "Who cares?"
 
-delhi.106.t:0 "[From.GetNameDef] Demands Our Burmese Districts"
+delhi.106.t:0 "[From.GetNameDefCap] Demands Our Burmese Districts"
 delhi.106.d:0 "The cursed [From.GetAdjective] government is demanding the return of the Burmese territory we 'pacified' during the Raj's collapse. This is a shameful display of bad manners!"
 delhi.106.a:0 "It's no use fighting over these useless provinces"
 delhi.106.b:0 "We know of no 'Burmese' districts, this is Siam - one and indivisible!"
@@ -354,7 +370,7 @@ delhi.110.t:0 "[From.GetName] Defends [SIA.GetNameDef]"
 delhi.110.d:0 "Curses! The cowardly Siamese have hid under the skirts of their [From.GetAdjective] allies. What we thought to have been a simple revision of an illegal occupation has turned into an international conflict! This might be a bit more than we asked for, but the repercussions of giving up our claims would be disastrous as well."
 delhi.110.a:0 "Then we shall liberate the Malay Peninsula by force!"
 delhi.110.b:0 "Such a war would only bring chaos to all of Asia..."
-delhi.111.t:0 "[From.GetNameDef] Has Betrayed Us!"
+delhi.111.t:0 "[From.GetNameDefCap] Has Betrayed Us!"
 delhi.111.d:0 "The [From.GetAdjective] has sent a message saying they have no intention of defending us from [demand_country.GetNameDef]'s demands, considering we acquired the territory by force to begin with. They sternly suggest we return the Burmese lands as requested."
 delhi.111.a:0 "Then we shall fight these aggressors on our own!"
 delhi.111.b:0 "Secede the disputed territories"
