--- a/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Finland_l_english.yml
@@ -3,7 +3,7 @@ l_english:
 ### Parties ###
 FIN_totalist_party:0 "SSP"
 FIN_totalist_party_long:0 "핀란드 사회당"
-FIN_social_democrat_party:0 "SPD"
+FIN_social_democrat_party:0 "SDP"
 FIN_social_democrat_party_long:0 "핀란드 사회민주당"
 FIN_social_liberal_party:0 "ML"
 FIN_social_liberal_party_long:0 "중앙당"
