4월 업데이트&번역

--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -70,33 +70,33 @@ custom_diff_strong_jap:0 "일본 강화"
 custom_diff_strong_qie:0 "청나라 강화"
 
 ### Autonomy Levels ###
-kr_integrated_puppet:0 "Integrated Puppet"
-kr_occupied_puppet:0 "Occupied Puppet"
-kr_default_puppet:0 "Puppet"
-kr_autonomous_puppet:0 "Autonomous Puppet"
-kr_nominal_puppet:0 "Nominal Puppet"
-kr_special_autonomous_dependency:0 "Autonomous Dependency"
-kr_african_colony:0 "African Colony"
-kr_african_tributary:0 "African Tributary"
+kr_integrated_puppet:0 "융회된 괴뢰국"
+kr_occupied_puppet:0 "점령된 괴뢰국"
+kr_default_puppet:0 "괴뢰국"
+kr_autonomous_puppet:0 "자치 괴뢰국"
+kr_nominal_puppet:0 "명목상 괴뢰국"
+kr_special_autonomous_dependency:0 "자치 속국"
+kr_african_colony:0 "아프리카 식민지"
+kr_african_tributary:0 "아프리카 조공국"
 autonomy_colony:1 "식민지"
 autonomy_dominion:1 "자치령"
 
 ### Autonomy Tooltips ###
-can_lower_autonomy_level:0 "Can lower autonomy level\n"
-can_raise_autonomy_level:0 "Can raise autonomy level\n"
-puppet_can_become_free:0 "May become independent\n"
-puppet_can_be_annexed:0 "May be annexed by the overlord\n"
-may_raise_autonomy:0 "§Y[Root.GetNameDefCap]§! may now raise autonomy level\n"
-may_become_free:0 "§Y[Root.GetNameDefCap]§! may now work towards independence\n"
+can_lower_autonomy_level:0 "자치도를 낮출 수 있습니다\n"
+can_raise_autonomy_level:0 "자치도를 높일 수 있습니다\n"
+puppet_can_become_free:0 "독립할 수 있습니다\n"
+puppet_can_be_annexed:0 "종주국에게 합병될 수 있습니다\n"
+may_raise_autonomy:0 "§Y[Root.GetNameDefCap]§!의 자치도를 낮출 수 있습니다\n"
+may_become_free:0 "§Y[Root.GetNameDefCap]§! (은)는 독립을 향해가고 있습니다\n"
 
 ### Autonomy Events ###
 kr.political.100.t:0 "Order Restored in [Root.GetNameDef]"
 kr.political.100.d:0 "While [Root.GetNameDef] still labours under [overlord_name.GetAdjective] control, the [Root.GetAdjective] military has asserted enough control over our own borders that a semblance of greater autonomy is now possible to exert. This is not independence - far from it - but it does mean we no longer have to rely on [overlord_name.GetAdjective] troops to secure our borders."
 kr.political.100.a:0 "Excellent"
 
-kr.political.101.t:0 "Greater [Root.GetAdjective] Autonomy?"
+kr.political.101.t:0 "대 [Root.GetAdjective] 자치령?"
 kr.political.101.d:0 "[Root.GetNameDefCap] remains under the control of the [overlord_name.GetAdjective] government, but that control is beginning to surely lessen as our strength reasserts itself. [Root.GetAdjective] power is not something to be easily contained, and already our leaders are clamouring for more control over our own affairs. Surely our [overlord_name.GetAdjective] will not be able to resist us for long."
-kr.political.101.a:0 "Long live [Root.GetNameDef]!"
+kr.political.101.a:0 "[Root.GetNameDef]이시여 만수무강 하소서!"
 
 ### Land Units ###
 garrison:0 "주둔군"
